Se hacen puntos de exp, faltan acordiones

--- a/src/app/experiencia/experiencia.component.html
+++ b/src/app/experiencia/experiencia.component.html
@@ -3,17 +3,16 @@
   <article class="font-fira mx-auto max-w-5xl p-4 selection:bg-black text-white selection:text-white flex-grow">
     <h1 class="font-fira mb-8 text-4xl font-bold dark:text-white sm:mt-12">Experiencia <span class="text-green-500">Laboral</span></h1>
 
-    <img class="float-right w-52 rounded-full -mt-8 ml-8" src="assets/iconexp.png" alt="nose" />
+    <img class="float-right w-60 rounded-lg -mt-8 ml-12" src="assets/training.png" alt="Chamba" />
 
+    <p class="mt-10 text-xl dark:text-neutral-200">Aqui encontraras los diferentes <span class="text-green-400">empleos</span> que he tenido a lo largo del tiempo, además de explicar las <span class="text-green-400">actividades</span> que desarrolle, las <span class="text-green-400">fortalezas</span> que obtuve gracias a ellos y por ultimo  las circunstancias que llevaron a la finalización de cada relación laboral. </p>
+    <br>
 
-    <p class="mt-10 text-lg dark:text-neutral-200">Aqui encontraras los diferentes <span class="text-green-500">empleos</span> que he tenido a lo largo del tiempo, además de explicar las <span class="text-green-500">fortalezas</span> que desarrolle, los <span class="text-green-500">proyectos</span> en los que me vi involucrado y por ultimo  las circunstancias que llevaron a la terminación de cada relación laboral. </p>
-
-
-    <section class="mt-12">
-      <h2 class="text-3xl font-bold dark:text-white">Work Experience</h2>
-      <p class="mt-6 text-lg dark:text-neutral-200">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
-        aspernatur numquam suscipit. Quae, itaque veritatis. Mollitia sunt consequatur a. Id, quia fuga laudantium enim
-        illo deserunt minima pariatur soluta veniam!</p>
+    <section *ngFor="let item of items" class="mt-4 mr-30 bg-gray-800 dark:bg-gray-800 shadow-lg p-6 rounded-lg">
+      <h2 class="text-3xl font-bold dark:text-white">{{item.empresa}} <span class="text-2xl font-bold dark:text-white">{{item.fecha}}</span></h2>
+      <ul class="mt-6 text-lg dark:text-neutral-200 mr-60 list-disc list-inside">
+        <li *ngFor="let punto of item.descripcion">{{punto}}</li>
+      </ul>
     </section>
 
   </article>
@@ -24,3 +23,5 @@
       </aside>
     </footer>
 </div>
+
+
