--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -30,7 +30,7 @@
             </div>
 
         </div>
-        <form #form="ngForm" (ngSubmit)="enviarWhatsapp(form)" class="md:col-span-8 p-10">
+        <form #form="ngForm" (ngSubmit)="enviarMensaje(form)" class="md:col-span-8 p-10">
           <fieldset class="flex justify-center rounded-md shadow-sm mb-3">
             <legend class="sr-only">Group of buttons</legend>
             <button type="button" value="whatsapp" (click)="botonSeleccionado('whatsapp')" [ngClass]="{'selected': botonselecto === 'whatsapp'}" class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-s-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white">
@@ -87,7 +87,7 @@
                     <textarea
                         required
                         name="mensaje"
-                        rows="10"
+                        rows="5"
                         class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" pInputText [(ngModel)]="mensaje"></textarea>
                 </div>
                 <div class="flex justify-between w-full px-3">
@@ -96,7 +96,12 @@
                         type="submit">
                         Enviar mensaje
                     </button>
-
+                    <button
+                        (click)="regresar()"
+                        class="shadow bg-indigo-600 hover:bg-indigo-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-6 rounded"
+                        type="button">
+                        Regresar
+                    </button>
                 </div>
             </div>
 
