--- a/src/app/educacion/educacion.component.html
+++ b/src/app/educacion/educacion.component.html
@@ -1,1 +1,40 @@
-<p>educacion works!</p>
+<div class="flex flex-col min-h-screen bg-gray-900 dark:bg-gray-900 text-justify">
+
+    <article class="font-fira mx-auto max-w-5xl p-4 selection:bg-black text-gray-200 selection:text-white flex-grow">
+      <h1 class="font-fira mb-8 text-4xl font-bold sm:mt-12">Experiencia <span class="text-yellow-500">Laboral</span></h1>
+  
+      <img class="float-right w-60 rounded-lg -mt-8 ml-12" src="assets/reading.png" alt="Chamba" />
+  
+      <p class="mt-10 text-2xl ">Aqui observaras las diferentes <span class="text-yellow-400">instituciones</span> a las que he asistido durante mi vida  <span class="text-yellow-400">escolar</span></p>
+      <br>
+  
+      <section *ngFor="let item of items" class="mt-4 mr-30 bg-gray-800 dark:bg-gray-800 shadow-lg p-6 rounded-lg">
+        <h2 class="text-3xl font-bold ">{{item.escuela}} <span class="text-2xl font-bold ">{{item.fecha}}</span></h2>
+        <ul class="mt-6 text-lg mr-60 list-disc list-outside ml-6">
+          <li *ngFor="let punto of item.descripcion">{{punto}}</li>
+          <li *ngFor="let acordeonItem of item.acordeon"> 
+            <details class="group mt-1">
+              <summary class="flex justify-between items-center cursor-pointer list-none">
+                <span>{{acordeonItem.titulo}}</span>
+                <span class="transition group-open:rotate-180">
+                      <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" width="24"><path d="M6 9l6 6 6-6"></path></svg>
+                    </span>
+              </summary>
+              <p class="mt-2 text-base group-open:animate-fadeIn">
+                 {{acordeonItem.texto}}
+              </p>
+            </details>
+          </li>
+        </ul>
+      </section>
+      <div class="mt-12 text-center">
+        <button
+          (click)="enviarAlMenu()"
+          class="transform hover:scale-105 hover:brightness-125 transition-all duration-200 inline-block rounded bg-blue-500 px-12 py-3 text-sm font-medium text-white hover:bg-blue-800 focus:outline-none"
+        >
+          Regresar
+        </button>
+      </div>
+    </article>
+  </div>
+  
