--- a/src/app/educacion/educacion.component.html
+++ b/src/app/educacion/educacion.component.html
@@ -9,24 +9,32 @@
       <br>
   
       <section *ngFor="let item of items" class="mt-4 mr-30 bg-gray-800 dark:bg-gray-800 shadow-lg p-6 rounded-lg">
-        <h2 class="text-3xl font-bold ">{{item.escuela}} <span class="text-2xl font-bold ">{{item.fecha}}</span></h2>
-        <ul class="mt-6 text-lg mr-60 list-disc list-outside ml-6">
-          <li *ngFor="let punto of item.descripcion">{{punto}}</li>
-          <li *ngFor="let acordeonItem of item.acordeon"> 
-            <details class="group mt-1">
-              <summary class="flex justify-between items-center cursor-pointer list-none">
-                <span>{{acordeonItem.titulo}}</span>
-                <span class="transition group-open:rotate-180">
-                      <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" width="24"><path d="M6 9l6 6 6-6"></path></svg>
-                    </span>
-              </summary>
-              <p class="mt-2 text-base group-open:animate-fadeIn">
-                 {{acordeonItem.texto}}
-              </p>
-            </details>
-          </li>
-        </ul>
+        <details class="group">
+          <summary class="flex justify-between items-center cursor-pointer list-none">
+            <h2 class="text-3xl font-bold ">{{item.escuela}} <span class="text-2xl font-bold ">{{item.fecha}}</span></h2>
+            <span class="transition group-open:rotate-180">
+              <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" width="24"><path d="M6 9l6 6 6-6"></path></svg>
+            </span>
+          </summary>
+          <ul class="mt-6 text-lg mr-60 list-disc list-outside ml-6 group-open:animate-fadeIn">
+            <li *ngFor="let punto of item.descripcion">{{punto}}</li>
+            <li *ngFor="let acordeonItem of item.acordeon"> 
+              <details class="group mt-1">
+                <summary class="flex justify-between items-center cursor-pointer list-none">
+                  <span>{{acordeonItem.titulo}}</span>
+                  <span class="transition">
+                    <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" width="24"><path d="M6 9l6 6 6-6"></path></svg>
+                  </span>
+                </summary>
+                <p class="mt-2 text-base group-open:animate-fadeIn">
+                  {{acordeonItem.texto}}
+                </p>
+              </details>
+            </li>
+          </ul>
+        </details>
       </section>
+
       <div class="mt-12 text-center">
         <button
           (click)="enviarAlMenu()"
