--- a/src/app/sobremi/sobremi.component.html
+++ b/src/app/sobremi/sobremi.component.html
@@ -5,9 +5,10 @@
           <div class="flex px-2 lg:px-0 justify-center lg:justify-start">
             <div class="flex-shrink-0 flex items-center">
               <img
-                class="h-10 w-auto"
+                class="h-10 w-auto cursor-pointer"
                 src="assets/logo3.png"
                 alt="Workflow logo"
+                (click)="enviarAlMenu()"
               />
             </div>
           </div>
