se inicia con descripcion de cursos

--- a/src/app/cursos/cursos.component.html
+++ b/src/app/cursos/cursos.component.html
@@ -4,16 +4,18 @@
 
         <div class="transition duration-500 ease-in-out transform scale-100 translate-x-0 translate-y-0 opacity-100">
             <div class="mb-12 space-y-5 md:mb-16 md:text-center">
-                <div
-                    class="inline-block px-3 py-1 text-sm font-semibold text-indigo-100 rounded-lg md:text-center text-cn bg-[#202c47] bg-opacity-60 hover:cursor-pointer hover:bg-opacity-40">
-                    Words from Others
-                </div>
                 <h1 class="mb-5 text-3xl font-semibold text-white md:text-center md:text-5xl">
-                    It's not just us.
+                    Cursos y certificaciones
                 </h1>
                 <p class="text-xl text-gray-100 md:text-center md:text-2xl">
-                    Here's what others have to say about us.
+                    En esta ruta de GitHub encontrarás los diplomas y certificados de los cursos que he realizado.
                 </p>
+                <a
+                href="https://github.com/Marco23rubio/Cursos"
+                target="_blank"
+                class="inline-block px-3 py-1 text-lg font-semibold text-indigo-100 rounded-lg md:text-center text-cn bg-[#202c47] bg-opacity-60 hover:cursor-pointer hover:bg-opacity-40 hover:text-blue-500 hover:underline">
+                https://github.com/Marco23rubio/Cursos
+            </a>
             </div>
         </div>
 
