--- a/src/app/proyectos/proyectos.component.html
+++ b/src/app/proyectos/proyectos.component.html
@@ -2,7 +2,7 @@
     <div class="h-full py-6 sm:py-8 lg:py-12">
         <div class="mx-auto max-w-screen-2xl px-4 md:px-8">
             <div class="mb-4 flex items-center justify-center gap-8 sm:mb-8 md:mb-12">
-                <div class="mb-4 flex flex-col items-start justify-center gap-4 sm:mb-8 md:mb-12">
+                <div class="mb-4 flex flex-col items-start justify-center gap-4 sm:mb-4 md:mb-2">
                     <h2 class="text-2xl font-bold text-gray-200 lg:text-5xl">Proyectos personales</h2>
                     <p class="max-w-screen-md text-gray-200 text-2xl md:block">
                         Aqui estan la mayoria de proyectos personales que he realizado,dando click en la imagen veras el repositorio donde se encuentran alojados y la descripción de cada uno.
@@ -16,7 +16,7 @@
                     href="{{item.link}}"
                     target="_blank"
                     class="group relative flex h-48 items-end overflow-hidden rounded-lg bg-gray-800 shadow-lg md:h-80 md:{{item.md}}">
-                    <img src="{{item.imagen}}" loading="lazy" alt="Photo by Minh Pham" class="absolute inset-0 h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
+                    <img src="{{item.imagen}}" loading="lazy" class="absolute inset-0 h-full w-full object-cover object-center transition duration-200 group-hover:scale-110 group-hover:opacity-10" />
                     <div
                         class="pointer-events-none absolute inset-0 bg-gradient-to-t from-gray-800 via-transparent to-transparent opacity-50">
                     </div>
