se agregan descripciones a proyectos

--- a/src/app/proyectos/proyectos.component.html
+++ b/src/app/proyectos/proyectos.component.html
@@ -4,7 +4,7 @@
             <div class="mb-4 flex items-center justify-center gap-8 sm:mb-8 md:mb-12">
                 <div class="mb-4 flex flex-col items-start justify-center gap-4 sm:mb-4 md:mb-2">
                     <h2 class="text-2xl font-bold text-gray-200 lg:text-5xl">Proyectos personales</h2>
-                    <p class="max-w-screen-md text-gray-200 text-2xl md:block">
+                    <p class="max-w-screen-md text-gray-200 text-md lg:text-2xl md:block">
                         Aqui estan la mayoria de proyectos personales que he realizado,dando click en la imagen veras el repositorio donde se encuentran alojados y la descripción de cada uno.
                     </p>
                 </div>
@@ -20,11 +20,11 @@
                     <div
                         class="pointer-events-none absolute inset-0 bg-gradient-to-t from-gray-800 via-transparent to-transparent opacity-50">
                     </div>
-                    <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-200">
+                    <div class="absolute inset-0 flex items-center text-sm justify-center opacity-0 group-hover:opacity-100 transition duration-200 p-2">
                         <span class="text-white text-lg">{{item.descripcion}}</span>
                     </div>
     
-                    <span class="relative ml-4 mb-3 inline-block text-sm text-white md:ml-5 md:text-lg">{{item.titulo}}</span>
+                    <span class="relative ml-4 mb-3 inline-block text-sm text-white md:ml-5 md:text-3xl">{{item.titulo}}</span>
                 </a>
                 <!-- image - end -->
     
