se agregan span y ruta de jupyter

--- a/src/app/proyectos/proyectos.component.html
+++ b/src/app/proyectos/proyectos.component.html
@@ -3,9 +3,9 @@
         <div class="mx-auto max-w-screen-2xl px-4 md:px-8">
             <div class="mb-4 flex items-center justify-center gap-8 sm:mb-8 md:mb-12">
                 <div class="mb-4 flex flex-col items-start justify-center gap-4 sm:mb-4 md:mb-2">
-                    <h2 class="text-2xl font-bold text-gray-200 lg:text-5xl">Proyectos personales</h2>
+                    <h2 class="text-2xl font-bold text-gray-200 lg:text-5xl"><span class="text-red-400">Proyectos</span> personales</h2>
                     <p class="max-w-screen-md text-gray-200 text-md lg:text-2xl md:block">
-                        Aqui estan la mayoria de proyectos personales que he realizado,dando click en la imagen veras el repositorio donde se encuentran alojados y la descripción de cada uno.
+                        Aqui estan la mayoria de trabajos <span class="text-red-400">propios</span> que he realizado,dando <span class="text-red-400">click</span> en la imagen veras el repositorio donde se encuentran alojados y la <span class="text-red-400">descripcion</span> de cada uno.
                     </p>
                 </div>
             </div>
