--- a/src/app/cursos/cursos.component.html
+++ b/src/app/cursos/cursos.component.html
@@ -5,10 +5,10 @@
         <div class="transition duration-500 ease-in-out transform scale-100 translate-x-0 translate-y-0 opacity-100">
             <div class="mb-12 space-y-5 md:mb-16 md:text-center">
                 <h1 class="mb-5 text-3xl font-semibold text-white md:text-center md:text-5xl">
-                    Cursos y certificaciones
+                    Cursos y <span class="text-pink-400">certificaciones</span>
                 </h1>
                 <p class="text-xl text-gray-100 md:text-center md:text-2xl">
-                    En esta ruta de GitHub encontrarás los diplomas y certificados de los cursos que he realizado.
+                    En esta ruta de <span class="text-pink-400">GitHub</span> encontrarás los diplomas y certificados de los <span class="text-pink-400">cursos</span> que he realizado.
                 </p>
                 <a
                 href="https://github.com/Marco23rubio/Cursos"
