se agregan imagenes y cursos

--- a/src/app/cursos/cursos.component.html
+++ b/src/app/cursos/cursos.component.html
@@ -13,7 +13,7 @@
                 <a
                 href="https://github.com/Marco23rubio/Cursos"
                 target="_blank"
-                class="inline-block px-3 py-1 text-lg font-semibold text-indigo-100 rounded-lg md:text-center text-cn bg-[#202c47] bg-opacity-60 hover:cursor-pointer hover:bg-opacity-40 hover:text-blue-500 hover:underline">
+                class="inline-block px-3 py-1 text-md font-semibold text-indigo-100 rounded-lg md:text-center text-cn bg-[#202c47] bg-opacity-60 hover:cursor-pointer hover:bg-opacity-40 hover:text-blue-500 hover:underline">
                 https://github.com/Marco23rubio/Cursos
             </a>
             </div>
@@ -28,7 +28,8 @@
                     <div class="relative group">
                         <div
                             class="absolute transition rounded-lg opacity-25 -inset-1 bg-gradient-to-r from-purple-600 to-pink-600 blur duration-400 group-hover:opacity-100 group-hover:duration-200">
-                        </div><a class="cursor-pointer">
+                        </div>
+                        <a class="cursor-pointer" target="_blank" href="{{item.ruta}}">
                             <div
                                 class="relative p-6 space-y-6 leading-none rounded-lg bg-slate-800 ring-1 ring-gray-900/5">
                                 <div class="flex items-center space-x-4"><img
@@ -51,7 +52,7 @@
                     <div class="relative group">
                         <div
                             class="absolute transition rounded-lg opacity-25 -inset-1 bg-gradient-to-r from-purple-600 to-pink-600 blur duration-400 group-hover:opacity-100 group-hover:duration-200">
-                        </div><a class="cursor-pointer">
+                        </div><a class="cursor-pointer" target="_blank" href="{{item.ruta}}">
                             <div
                                 class="relative p-6 space-y-6 leading-none rounded-lg bg-slate-800 ring-1 ring-gray-900/5">
                                 <div class="flex items-center space-x-4"><img
@@ -73,7 +74,7 @@
                     <div class="relative group">
                         <div
                             class="absolute transition rounded-lg opacity-25 -inset-1 bg-gradient-to-r from-purple-600 to-pink-600 blur duration-400 group-hover:opacity-100 group-hover:duration-200">
-                        </div><a class="cursor-pointer">
+                        </div><a class="cursor-pointer" target="_blank" href="{{item.ruta}}">
                             <div
                                 class="relative p-6 space-y-6 leading-none rounded-lg bg-slate-800 ring-1 ring-gray-900/5">
                                 <div class="flex items-center space-x-4"><img
