--- a/src/app/educacion/educacion.component.html
+++ b/src/app/educacion/educacion.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col min-h-screen bg-gray-900 dark:bg-gray-900 text-justify">
+<div class="flex-col min-h-screen bg-gray-900 dark:bg-gray-900 text-justify">
 
     <article class="font-fira mx-auto max-w-5xl p-4 selection:bg-black text-gray-200 selection:text-white flex-grow">
       <h1 class="font-fira mb-8 text-4xl font-bold sm:mt-12">Experiencia <span class="text-yellow-500">Laboral</span></h1>
@@ -16,7 +16,7 @@
               <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" width="24"><path d="M6 9l6 6 6-6"></path></svg>
             </span>
           </summary>
-          <ul class="mt-6 text-lg mr-60 list-disc list-outside ml-6 group-open:animate-fadeIn">
+          <ul class="mt-6 text-lg list-disc list-outside ml-6 group-open:animate-fadeIn">
             <li *ngFor="let punto of item.descripcion">{{punto}}</li>
           <li *ngFor="let acordeonItem of item.acordeon"> 
               <details class="group mt-1">
