--- a/src/app/experiencia/experiencia.component.html
+++ b/src/app/experiencia/experiencia.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col min-h-screen bg-gray-900 dark:bg-gray-900 text-justify">
+<div class="flex-col min-h-screen bg-gray-900 dark:bg-gray-900 text-justify">
 
   <article class="font-fira mx-auto max-w-5xl p-4 selection:bg-black text-gray-200 selection:text-white flex-grow">
     <h1 class="font-fira mb-8 text-4xl font-bold sm:mt-12">Experiencia <span class="text-green-500">Laboral</span></h1>
@@ -17,7 +17,7 @@
           </span>
         </summary>
         <div class="mt-2 text-base" [class.animate-fadeIn]="acordeonAbierto[i]">
-          <ul class="mt-6 text-lg mr-60 list-disc list-outside ml-6">
+          <ul class="mt-6 text-lg list-disc list-outside ml-6">
             <li *ngFor="let punto of item.descripcion">{{punto}}</li>
             <li *ngFor="let acordeonItem of item.acordeon; let j = index"> 
               <details class="group mt-1">
