--- a/src/app/educacion/educacion.component.html
+++ b/src/app/educacion/educacion.component.html
@@ -3,7 +3,7 @@
     <article class="font-fira mx-auto max-w-5xl p-4 selection:bg-black text-gray-200 selection:text-white flex-grow">
       <h1 class="font-fira mb-8 text-4xl font-bold sm:mt-12">Experiencia <span class="text-yellow-500">Laboral</span></h1>
   
-      <img class="float-right w-60 rounded-lg -mt-8 ml-12" src="assets/reading.png" alt="Chamba" />
+      <img class="float-right w-32 md:w-60 rounded-lg -mt-8 ml-12" src="assets/reading.png" alt="Chamba" />
   
       <p class="mt-10 text-2xl ">Aqui observaras las diferentes <span class="text-yellow-400">instituciones</span> a las que he asistido durante mi vida  <span class="text-yellow-400">escolar</span></p>
       <br>
@@ -11,12 +11,12 @@
       <section *ngFor="let item of items" class="mt-4 bg-gray-800 dark:bg-gray-800 shadow-lg p-6 rounded-lg max-w-7xl ">
         <details class="group">
           <summary class="flex justify-between items-center cursor-pointer list-none">
-            <h2 class="text-3xl font-bold ">{{item.escuela}} <span class="text-2xl font-bold ">{{item.fecha}}</span></h2>
+            <h2 class="text-lg md:text-3xl font-bold ">{{item.escuela}} <span class="text-base md:text-2xl font-bold ">{{item.fecha}}</span></h2>
             <span class="transition group-open:rotate-180">
               <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" width="24"><path d="M6 9l6 6 6-6"></path></svg>
             </span>
           </summary>
-          <ul class="mt-6 text-lg list-disc list-outside ml-6 group-open:animate-fadeIn">
+          <ul class="mt-6 text-sm md:text-lg list-disc list-outside ml-6 group-open:animate-fadeIn">
             <li *ngFor="let punto of item.descripcion">{{punto}}</li>
           <li *ngFor="let acordeonItem of item.acordeon"> 
               <details class="group mt-1">
@@ -26,7 +26,7 @@
                     <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" width="24"><path d="M6 9l6 6 6-6"></path></svg>
                   </span>
                 </summary>
-                <p class="mt-2 text-base group-open:animate-fadeIn">
+                <p class="mt-2 text-sm md:text-base group-open:animate-fadeIn">
                   {{acordeonItem.texto}}
                 </p>
               </details>
