se corrige ortografia

--- a/src/app/experiencia/experiencia.component.html
+++ b/src/app/experiencia/experiencia.component.html
@@ -5,7 +5,7 @@
 
     <img class="float-right w-32 md:w-60 rounded-lg -mt-8 ml-12" src="assets/training.png" alt="Chamba" />
 
-    <p class="mt-10 text-xl ">Aqui encontraras los diferentes <span class="text-green-400">empleos</span> que he tenido a lo largo del tiempo, además de explicar las <span class="text-green-400">actividades</span> que desarrolle, las <span class="text-green-400">fortalezas</span> que obtuve gracias a ellos y por ultimo  las circunstancias que llevaron a la finalización de cada relación laboral. </p>
+    <p class="mt-10 text-xl">Aquí encontrarás los diferentes <span class="text-green-400">empleos</span> que he tenido a lo largo del tiempo, además de explicar las <span class="text-green-400">actividades</span> que desarrollé, las <span class="text-green-400">fortalezas</span> que obtuve gracias a ellos y, por último, las circunstancias que llevaron a la finalización de cada relación laboral.</p>
     <br>
 
     <section *ngFor="let item of items; let i = index" class="mt-4 mr-30 bg-gray-800 dark:bg-gray-800 shadow-lg p-6 rounded-lg">
