--- a/src/app/educacion/educacion.component.html
+++ b/src/app/educacion/educacion.component.html
@@ -5,7 +5,7 @@
   
       <img class="float-right w-32 md:w-60 rounded-lg -mt-8 ml-12" src="assets/reading.png" alt="Chamba" />
   
-      <p class="mt-10 text-2xl ">Aqui observaras las diferentes <span class="text-yellow-400">instituciones</span> a las que he asistido durante mi vida  <span class="text-yellow-400">escolar</span></p>
+      <p class="mt-10 text-2xl">Aquí observarás las diferentes <span class="text-yellow-400">instituciones</span> a las que he asistido durante mi vida <span class="text-yellow-400">escolar</span></p>
       <br>
   
       <section *ngFor="let item of items" class="mt-4 bg-gray-800 dark:bg-gray-800 shadow-lg p-6 rounded-lg max-w-7xl ">
