--- a/src/app/proyectos/proyectos.component.html
+++ b/src/app/proyectos/proyectos.component.html
@@ -5,7 +5,7 @@
                 <div class="mb-4 flex flex-col items-start justify-center gap-4 sm:mb-4 md:mb-2">
                     <h2 class="text-2xl font-bold text-gray-200 lg:text-5xl"><span class="text-red-400">Proyectos</span> personales</h2>
                     <p class="max-w-screen-md text-gray-200 text-md lg:text-2xl md:block">
-                        Aqui estan la mayoria de trabajos <span class="text-red-400">propios</span> que he realizado,dando <span class="text-red-400">click</span> en la imagen veras el repositorio donde se encuentran alojados y la <span class="text-red-400">descripcion</span> de cada uno.
+                        Aquí están la mayoría de trabajos <span class="text-red-400">propios</span> que he realizado. Dando <span class="text-red-400">clic</span> en la imagen, verás el repositorio donde se encuentran alojados y la <span class="text-red-400">descripción</span> de cada uno.
                     </p>
                 </div>
             </div>
