--- a/src/app/sobremi/sobremi.component.html
+++ b/src/app/sobremi/sobremi.component.html
@@ -241,10 +241,10 @@
 
       <!--post images-->
 
-      <div class="mt-1 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mx-2">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mx-2">
         <div *ngFor="let item of items" class="flex-1 text-center px-4 py-2 m-1 relative">
           <img
-            class="w-full cursor-pointer transition-opacity duration-300 hover:opacity-60"
+            class="w-full h-5/6 cursor-pointer transition-opacity duration-300 hover:opacity-60"
             src="{{item.imagen}}"
             (click)="abrirModal(item)"
           />
@@ -260,7 +260,7 @@
       
           <!-- Modal content -->
           <div class="inline-block align-bottom bg-gray-900 rounded-lg text-gray-100 text-left overflow-hidden shadow-xl transform transition-all sm:mt-[20vh] sm:my-8 sm:align-middle sm:max-w-3xl sm:w-full">
-            <button type="button" class="absolute top-0 right-0 m-2 text-gray-600 hover:text-gray-900 focus:outline-none" (click)="showModal = false">
+            <button type="button" class="absolute top-0 right-0 m-2 text-gray-600 hover:text-gray-700 focus:outline-none" (click)="showModal = false">
               <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
               </svg>
